OpenAPIで生成したソースコードを利用するよう対応
